# tkr-docusearch

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  GETTING_STARTED.md  LICENSE  PRODUCTION_SETUP.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.txt  SEARCH_AGENT_SUMMARY.md  WAVE4_COMPLETION.md  _context-kit.yml  claude.local.md  commitlint.config.js  conftest.py  coverage.json  docusearch  kg-update-summary-wave3-4.md  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  quick-start.sh  requirements.txt  start-all.sh  start-api.sh  start-ui.sh  stop-all.sh  test_markdown.py  test_websocket.py  tkr-kit.yml
.archive/: ARCHIVE_NOTES.md
.claude/: settings.local.json
.claude/agents/: command-writer.md  data-flow-analyzer.md  design-system.md  dir-mapper.md  docs-context7.md  import-relationship-mapper.md  kg-update.md  meta-agent.md  port-consistency.md  project-yaml-builder.md  project-yaml-update.md  react-component-analyzer.md  react-hooks-analyzer.md  storybook-component-analyzer.md  storybook-maintainer.md  validation-agent.md
.claude/commands/: categorize_errors.md  commit.md  context-init.md  context_prime.md  create_plan.md  kg-orchestrate.md  kg_init.md  minima.md  orchestration_plan.md  project-yaml.md
.claude/hooks/: hooks.sh
.context-kit/: .gitignore  _context-kit.yml  package.json  start
.context-kit/_ref/: .ref  COMPLETION_SUMMARY.md  First_Commit_Date.md  document-view-tab-requirements.md  document_information_schema.md  footer_header_changes.md  gpt-oss-20B.md  mvp-architecture.md
.context-kit/_specs/: .specs  CONFIGURATION.md  TECHNICAL_DEBT.md  audio-metadata-library-decision.md  docling_implementation.md  enhanced_mode_config.md  file-validator-usage.md  research-bot-architecture.md  research-page-implementation-plan.md  tinytag-migration-implementation-plan.md  worker-architecture-decision.md
.context-kit/analysis/: .analysis  .review-exclusions  EXCLUSIONS.md  README.md  architecture-graph.md  design-system-output.yml  dir-structure-output.yml  docs-context7-output.yml  exclusion-helper.sh  index.html  kg-analysis-report.md  kg-summary-stats.md  manifest.json  port-consistency-output.yml
.context-kit/core/: test-db.ts  tsconfig.json
.context-kit/implementation-summaries/: filter-dropdown-simplification.md
.context-kit/knowledge-graph/: README.md  minimal-schema-test.ts  package.json  test-database-fix.ts  test-exact-db-path.ts  test-logging.md  tsconfig.json  vitest.config.ts
.context-kit/logging-client/: .gitignore  AUTOMATIC_LOGGING_GUIDE.md  INTEGRATION_GUIDE.md  README.md  auto-init.js  auto-init.mjs  index.js  index.ts  logging-interfaces.json  package-integration-example.json  package.json  setup-logging.sh  tkr-logger-enhanced.sh  tkr-logger.sh  tsconfig.json
.context-kit/mcp/: debug-server.js  test-protocol.js  test-search-simple.js  test-search.js  tsconfig.json
.context-kit/orchestration/: wave2-completion-report.md  wave2-metrics.md  wave3-4-final-completion.md  wave3-completion-summary.md  wave3-progress-report.md
.context-kit/scripts/: check-ports.sh  context7_mcp_add  dev  paths.sh  setup-context-kit-mcp  start-all  status  stop-all  utils.sh
.docs/: search-api-documentation-report.md
.github/: dependabot.yml
.husky/: pre-commit
_ref/: ARCHITECTURE_SUMMARY.md  docling-model-requirements.md  mvp-architecture.md
_ref.bak/: docker-deployment-m1.md  embedding-models-comparison.md  integration-guide.md  processing-approaches-comparison.md
bak.claude/: hook_runner.sh  mcp_runner.sh  settings.local.json
benchmarks/: PROMPT_ANALYSIS.md  README.md  WAVE4_COMPLETION_REPORT.md  preprocessing_benchmark.py
copyparty/: CONTRIBUTING.md  flake.nix
docker/: .env  .env.example  .env.template  Dockerfile.copyparty  Dockerfile.legacy-office-converter  Dockerfile.processing-worker  Dockerfile.slide-renderer  docker-compose.native-worker.yml  docker-compose.yml  legacy_office_converter_api.py  slide_renderer_api.py
docs/: API_ENHANCED_ENDPOINTS.md  API_LEGACY_OFFICE.md  API_REFERENCE.md  AUDIO_METADATA_EXTRACTION.md  AUDIO_TIMESTAMP_FIX.md  BIDIRECTIONAL_HIGHLIGHTING.md  BUG_FIXES_2025-10-11.md  CICD_SETUP_REPORT.md  CONTRIBUTING.md  DELETE_FEATURE.md  DEVELOPER_GUIDE_BBOX.md  DOCKER_AUTO_START.md  ENHANCED_MODE.md  ENVIRONMENT_SETUP.md  GPU_ACCELERATION.md  IMAGE_STORAGE.md  LEGACY_OFFICE_CONVERSION.md  LEGACY_OFFICE_MIGRATION.md  LOCAL_LLM_PREPROCESSING.md  MIGRATION_PREPROCESSING.md  MLX_WHISPER_MONITORING.md  MONITORING.md  MONITORING_IMPLEMENTATION.md  MULTI_FORMAT_SUPPORT.md  NATIVE_WORKER_SETUP.md  PDF_REPAIR.md  QUICK_START.md  RESEARCH_BOT_GUIDE.md  RESEARCH_BOT_VISION_SETUP.md  SCRIPTS.md  TROUBLESHOOTING_DOC_CONVERSION.md  WEBSOCKET_API.md  koji-team-requests.md  rustfs-replacement-analysis.md  rustfs-replacement-guide.md
frontend/: .env.example  FOUNDATION_COMPLETE.md  UTILITIES.md  index.html  package-lock.json  package.json  performance-benchmarks.md  playwright.config.js  tsconfig.json  vite.config.js  vitest.config.js
hooks/: on_delete.py  on_upload.py
integration-contracts/: backend-validation-report.md  docling-structure-spec.md  sample-api-responses.json  sample-structure.json  structure-api-implementation-report.md
scripts/: README.md  README_QUERY.md  batch_upload.sh  benchmark_performance.js  cleanup_orphaned_docs.py  clear-caches.sh  inspect_audio_provenance.py  inspect_whisper_output.py  migrate_enhanced_mode.py  model-download-status.sh  query-chromadb.py  query-chromadb.sh  run-worker-native.sh  run_e2e_tests.sh  setup-mlx-model.sh  setup.sh  start-all.sh  start-research-api.sh  start-vision-research.sh  start.sh  status.sh  stop-all.sh  stop.sh  validate_enhanced_mode.py  validate_migration.py  warmup-shikomi.py
src/: __init__.py  test_end_to_end.py
tests/: test_audio_timestamp_integration.py  test_documents_api_deletion.py  test_documents_api_status.py  test_documents_api_upload.py  test_image_utils.py  test_markdown.py  test_mcp_server.py  test_monitoring_integration.py  test_websocket.py
(+1124 files in other folders)
